--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,39 +1,6 @@
-.card{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    width: 40%;
-    margin: auto;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding: 20px;
-}
-
-.card + .card {
-    margin-top: 50px;
-}
-
-.text-large{
-    font-weight: bold;
-    text-align: center;
-}
-
-.img{
-    width: 100%;
-    border-radius: 10px;
-}
-
-.detail {
-    text-align: left;
-    line-height: 5px;
-    color: #414040;
-}
-
-.btn-primary{
-    border: none;
-    background-color: dodgerblue;
-    padding: 10px 15px;
-    border-radius: 2px;
-    outline: none;
-    cursor: pointer;
+.active{
+    text-decoration: none;
     color: white;
+    background-color: black;
+    border-radius: 5px;
 }
